# Pizza_shop

./: forms.py  main.py  pyproject.toml  requirements.txt  test.py
instance/: pizzas.db
static/CSS/: basket-page-css.css  cover-css.css  login_page.css  pizza-page-css.css  register_page.css
static/JS/: pizza-page-js.js
templates/: base.html  basket-page.html  cover.html  header.html  login.html  pizza-page.html  register.html  success.html
